Fix horizontal space on mobile

--- a/src/templates/post.module.sass
+++ b/src/templates/post.module.sass
@@ -1,24 +1,32 @@
 @import '../components/media'
 @import '../components/colors'
 
+$hPaddingDesktop: 40px
+$hPaddingMobile: 25px
+
 .post
   background-color: $white
   border-radius: 6px
   box-shadow: 1px 2px 3px $grey2
-  padding: 30px 0
+  padding: 30px $hPaddingMobile
   margin-bottom: 32px
+
+  +media('>tablet')
+    padding: 30px $hPaddingDesktop
 
 .post_body
   display: flex
-  padding: 38px 0
+  padding-top: 32px
+  padding-bottom: 24px
   flex-direction: column
+
+  +media('>phone_l')
+    padding: 38px 0
 
   +media('>tablet')
     flex-direction: row
 
 .post_intro
-  padding: 0 40px
-
   > h1
     font-weight: 500
 
@@ -28,8 +36,10 @@
   align-items: baseline
   margin-bottom: 10px
 
+.post_headline
+  margin-bottom: 1.45em
+
 .post_ingredients
-  padding: 0 40px
   flex: 1
   min-width: 250px
 
@@ -38,13 +48,13 @@
 
   +media('>tablet')
     border-right: 1px solid $grey3
+    padding-right: 40px
 
   > h3
     font-weight: 500
     margin-top: 1.45rem
 
 .post_directions
-  padding: 0 40px
   flex: 3
   margin-top: 32px
 
@@ -52,6 +62,7 @@
     font-weight: 500
 
   +media('>tablet')
+    padding-left: 40px
     margin-top: 0
 
 .post_title
@@ -86,7 +97,9 @@
   background: $grey1
 
 .cover_image
+  margin: 0 (-$hPaddingMobile)
   height: 200px
 
   +media('>tablet')
+    margin: 0 (-$hPaddingDesktop)
     height: 300px
